# suitest

./: Cargo.toml  README.md
suitest/: Cargo.toml
suitest/src/: lib.rs  state.rs
suitest_macros/: Cargo.toml
suitest_macros/src/: impl.rs  lib.rs  suite.rs
tests/: Cargo.toml
tests/src/: lib.rs  poc.rs
